--- a/frontend/login.html
+++ b/frontend/login.html
@@ -44,7 +44,7 @@
     <h2>Login</h2>
 
     <form method="post" action="/auth/login">
-      <input type="text" name="student_id" placeholder="Student ID" required><br>
+      <input type="text" name="student_id" placeholder="Employee ID" required><br>
       <input type="password" name="password" placeholder="Password" required><br>
       <input type="submit" value="Login">
     </form>
