--- a/frontend/results.html
+++ b/frontend/results.html
@@ -19,7 +19,7 @@
       padding: 30px;
       border-radius: 10px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      width: 500px;
+      width: 600px;
       text-align: center;
       position: relative;
     }
@@ -41,22 +41,24 @@
       background-color: #c82333;
     }
 
-    .result-grid {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 10px;
-      margin-top: 40px;
+    table {
+      width: 100%;
+      margin-top: 30px;
+      border-collapse: collapse;
     }
 
-    .result-grid div {
+    th, td {
+      border: 1px solid #ccc;
       padding: 10px;
-      background-color: #f1f1f1;
-      border-radius: 5px;
-      text-align: left;
+      text-align: center;
+    }
+
+    th {
+      background-color: #f5f5f5;
     }
 
     .feedback-btn {
-      margin-top: 30px;
+      margin-top: 25px;
       padding: 10px 25px;
       background-color: #28a745;
       color: white;
@@ -78,15 +80,27 @@
     </form>
 
     <!-- Welcome Text -->
-    <h2>Welcome, Student ID: {{ student_id }}</h2>
+    <h2>Results for {{ student_name }} (ID: {{ student_id }})</h2>
 
-    <!-- Results Grid -->
-    <div class="result-grid">
-      <div><strong>Math:</strong> {{ results.math }}</div>
-      <div><strong>Science:</strong> {{ results.science }}</div>
-      <div><strong>English:</strong> {{ results.english }}</div>
-      <div><strong>History:</strong> {{ results.history }}</div>
-    </div>
+    <!-- Results Table -->
+    <table>
+      <thead>
+        <tr>
+          <th>Subject</th>
+          <th>Score</th>
+          <th>Grade</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for subject in results %}
+        <tr>
+          <td>{{ subject.subject }}</td>
+          <td>{{ subject.score }}</td>
+          <td>{{ subject.grade }}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
 
     <!-- Feedback Button -->
     <form method="get" action="/feedback">
